welcome.lessons.welcome.array.basics.Array2.scala.error
Array2:2: error: not found: value getMondehauteur
var T = new Array[Color] (getMondehauteur())
                          ^Array2:6: error: not found: value tab
		tab(i) = getCouleurSol()
                ^Array2:18: error: not found: value tab
		setCouleurBrosse(tab(k)+decalage)
                                 ^