welcome.lessons.welcome.array.basics.Array2.scala.code
override def run() {
var T = new Array[Color] (getMondehauteur())
var decalage = litMessage().toInt
	for (i <- 0 to getMondeHauteur()-1)
	{
		tab(i) = getCouleurSol()
		avance()

	}

	for (j <- 0 to getMondeLargeur()-1)
	{
		recule(5)
		gauche()
		avance()
		droite()
		for (k<- 0 to getMondeHauteur()-1)
		setCouleurBrosse(tab(k)+decalage)
		baisseBrosse()
		avance()
		leveBrosse()
		
		
	}
	


}
